--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
 <body>
   <!-- Some sort of HTML that directly correlates with your main.js -->
 
-  <!-- Uncomment the following code to check that bootstrap is working! -->
+ Uncomment the following code to check that bootstrap is working! 
 
-  <!-- <div class="card">
+  <div class="card">
   <div class="card" style="width: 18rem;">
     <img class="card-img-top"
       src="https://images.unsplash.com/photo-1534278931827-8a259344abe7?ixlib=rb-1.2.1&w=1000&q=80"
@@ -23,7 +23,14 @@
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
-</div> -->
+</div> 
+
+<a href="#" id=getAPIbutton class="btn btn-primary">api</a>
+
+<div id='thingGoesHere'></div>
+<div id='errorHere'>test</div>
+
+
 </body>
 
 </html>
