add html elements, javascript funcionality

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,10 @@
 
 <div id='thingGoesHere'></div>
 <div id='errorHere'>test</div>
-
+<div class="form-group">
+  <label for="form">Please enter a USD amount:</label>
+  <input type="form" class="form-control" id="userInput" placeholder="">
+</div>
 
 </body>
 
