--- a/src/index.html
+++ b/src/index.html
@@ -25,13 +25,13 @@
   </div>
 </div> 
 
-<a href="#" id=getAPIbutton class="btn btn-primary">api</a>
-
+<!--<a href="#" id=getAPIbutton class="btn btn-primary">api</a>-->
+<button type="submit" button id="getAPIbutton" class="btn btn-primary">Submit your number!</button>
 <div id='thingGoesHere'></div>
 <div id='errorHere'>test</div>
 <div class="form-group">
   <label for="form">Please enter a USD amount:</label>
-  <input type="form" class="form-control" id="userInput" placeholder="">
+  <input type="form" class="form-control" id="usDollarAmount" placeholder="">
 </div>
 
 </body>
