add error check

--- a/src/index.html
+++ b/src/index.html
@@ -33,18 +33,18 @@
   <label for="form">Please enter a USD amount:</label>
   <input type="form" class="form-control" id="usDollarAmount" placeholder="">
   
-  <form id="first-form">
+  <!--<form id="first-form">-->
     <div class="form-group" id="form-group1">
       <label for="sel1"></label>
-      <select class="form-control" id="beverage" data-validation="required">
+      <select class="form-control" id="country" data-validation="required">
         <option required> -- select an option -- </option>
-        <option value="1">United Arab Emirates Dirham</option>
-        <option value="2">Argentine Peso</option>
-        <option value="3">Australian Dollar</option>
-        <option value="4">Bulgarian Lev</option>
+        <option value="1">United Arab Emirates Dirham(AED)</option>
+        <option value="2">Argentine Peso(ARS)</option>
+        <option value="3">Australian Dollar(AUD)</option>
+        <option value="4">Bulgarian Lev(BGN)</option>
       </select>
     </div>
-  </form>
+  <!--</form>-->
   
   
   <button type="submit" button id="getAPIbutton" class="btn btn-primary">Submit your number!</button>
