--- a/src/index.html
+++ b/src/index.html
@@ -7,33 +7,19 @@
 </head>
 
 <body>
-  <!-- Some sort of HTML that directly correlates with your main.js -->
 
- Uncomment the following code to check that bootstrap is working! 
 
-  <div class="card">
-  <div class="card" style="width: 18rem;">
-    <img class="card-img-top"
-      src="https://images.unsplash.com/photo-1534278931827-8a259344abe7?ixlib=rb-1.2.1&w=1000&q=80"
-      alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This should be a working card class!
-      </p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-  </div>
-</div> 
-
-<!--<a href="#" id=getAPIbutton class="btn btn-primary">api</a>-->
+ 
+<div class = "container">
+<h1>Money-Exchanger!</h1>
 
 <div id='thingGoesHere'></div>
-<div id='errorHere'>test</div>
+<div id='errorHere'></div>
 <div class="form-group">
   <label for="form">Please enter a USD amount:</label>
   <input type="form" class="form-control" id="usDollarAmount" placeholder="">
   
-  <!--<form id="first-form">-->
+  
     <div class="form-group" id="form-group1">
       <label for="sel1"></label>
       <select class="form-control" id="country" data-validation="required">
@@ -42,16 +28,17 @@
         <option value="2">Argentine Peso(ARS)</option>
         <option value="3">Australian Dollar(AUD)</option>
         <option value="4">Bulgarian Lev(BGN)</option>
+        <option value="5">Brazilian Real(BRL)</option>
       </select>
     </div>
-  <!--</form>-->
+ 
   
   
   <button type="submit" button id="getAPIbutton" class="btn btn-primary">Submit your number!</button>
 
 <div id = "results"></div>
 </div>
-
+</div>
 </body>
 
 </html>
