add author details

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <script type="text/javascript" src="bundle.js"></script>
-  <title>Project Name</title>
+  <title>Currency Exchanger</title>
 </head>
 
 <body>
   <div class="container">
-    <h1>Money-Exchanger!</h1>
+    <h1>Currency-Exchanger!</h1>
     <div id='thingGoesHere'></div>
     <div id='errorHere'></div>
     <div class="form-group">
